test: ReplyController 테스트 작성 완료