@@ -1,5 +1,6 @@
 package kr.inuappcenterportal.inuportal.domain.reply.service;
 
+import jakarta.persistence.Tuple;
 import kr.inuappcenterportal.inuportal.domain.member.model.Member;
 import kr.inuappcenterportal.inuportal.domain.post.model.Post;
 import kr.inuappcenterportal.inuportal.domain.post.repository.PostRepository;
@@ -40,56 +41,54 @@ public class ReplyQueryService {
         Post post = postRepository.findById(postId).orElseThrow(()->new MyException(MyErrorCode.POST_NOT_FOUND));
         List<Reply> replies = replyRepository.findAllNonDeletedOrHavingChildren(post);
         Set<Long> likedReplyIds = getMemberLikedIds(replies,member);
+
         return replies.stream()
                 .filter(reply -> reply.getReply() == null) // 부모댓글만 처리 대상에 포함.
                 .map(reply -> {
-                    List<ReReplyResponseDto> reReplies = replies.stream() //부모 댓글에 연결된 대댓글 찾기
-                            .filter(reReply -> reReply.getReply() != null && reReply.getReply().getId().equals(reply.getId()))
-                            .map(reReply -> {
-                                boolean isLiked = likedReplyIds.contains(reReply.getId()); // 내가 좋아요를 누른 댓글인지 확인
-                                String writer = writerName(reReply, post); // 대댓글 이름 처리
-                                long fireId = writer.equals("(알수없음)") ? 13 : reReply.getMember().getFireId(); // 댓글 프로필 이미지 id값
-                                return ReReplyResponseDto.of(reReply, writer, fireId, isLiked, hasAuthority(member, reReply));
-                            }).collect(Collectors.toList());
+                    List<ReReplyResponseDto> reReplies = findReReplies(reply, replies, likedReplyIds, post, member);
                     boolean isLiked = likedReplyIds.contains(reply.getId());
-                    String writer = writerName(reply,post); //댓글 이름 처리
+                    String writer = writerName(reply,post);
                     long fireId = writer.equals("(알수없음)") ? 13 : reply.getMember().getFireId(); // 댓글 프로필 이미지 id값
                     return ReplyResponseDto.of(reply, writer, fireId, isLiked, hasAuthority(member, reply), reReplies);
-                })
-                .collect(Collectors.toList());
+                }).toList();
+    }
+
+    // 부모 댓글에 작성된 대댓글을 추출합니다.
+    private List<ReReplyResponseDto> findReReplies(Reply parentReply, List<Reply> replies, Set<Long> likedReplyIds, Post post, Member member) {
+        return replies.stream()
+                .filter(reReply -> reReply.getReply() != null && reReply.getReply().getId().equals(parentReply.getId()))
+                .map(reReply -> {
+                    boolean isLiked = likedReplyIds.contains(reReply.getId()); // 내가 좋아요를 누른 댓글인지 확인
+                    String writer = writerName(reReply, post); // 대댓글 이름 처리
+                    long fireId = writer.equals("(알수없음)") ? 13 : reReply.getMember().getFireId(); // 댓글 프로필 이미지 id값
+                    return ReReplyResponseDto.of(reReply, writer, fireId, isLiked, hasAuthority(member, reReply));
+                }).toList();
     }
 
     // 사용자가 자신의 댓글인지 여부를 판단하여, 수정, 또는 삭제 여부를 반환
-    public boolean hasAuthority(Member member, Reply reply){
+    private boolean hasAuthority(Member member, Reply reply){
         boolean hasAuthority = false;
         if(!reply.getIsDeleted() && member!=null && reply.getMember() != null && reply.getMember().getId().equals(member.getId())){
             hasAuthority = true;
         }
         return hasAuthority;
     }
+
     // 댓글 작성자의 이름을 처리합니다. 삭제됨, 알수없음, 횃불이(글쓴이), 횃불이(번호), 본인 nickname
-    public String writerName(Reply reply,Post post){
-        String writer;
+    private String writerName(Reply reply,Post post){
         if(reply.getIsDeleted()){
-            writer="(삭제됨)";
+            return "(삭제됨)";
         }
-        else if(reply.getMember()==null){
-            writer="(알수없음)";
+        if(reply.getMember()==null){
+            return "(알수없음)";
         }
-        else{
-            if (reply.getAnonymous()) {
-                if(reply.getMember().equals(post.getMember())){
-                    writer = "횃불이(글쓴이)";
-                }
-                else {
-                    writer = "횃불이"+reply.getNumber();
-                }
+        if(reply.getAnonymous()) {
+            if(reply.getMember().equals(post.getMember())){
+                return "횃불이(글쓴이)";
             }
-            else{
-                writer = reply.getMember().getNickname();
-            }
+            return "횃불이"+reply.getNumber();
         }
-        return writer;
+        return reply.getMember().getNickname();
     }
 
     // 좋아요 개수가 많은 순으로 댓글을 조회합니다.
@@ -123,13 +122,9 @@ public class ReplyQueryService {
         if(sort.equals("date")){
             return Sort.by(Sort.Direction.DESC, "id");
         }
-        else if(sort.equals("like")){
+        if(sort.equals("like")){
             return Sort.by(Sort.Direction.DESC, "likeCount","id");
         }
-        else{
-            throw new MyException(MyErrorCode.WRONG_SORT_TYPE);
-        }
+        throw new MyException(MyErrorCode.WRONG_SORT_TYPE);
     }
-
-
 }
